[package]
name = "rat-salsa-wgpu"
version = "0.1.0"
authors = ["thscharler <thscharler@gmail.com>"]
edition = "2024"
description = "ratatui + wgpu + winit event-loop and widgets"
license = "MIT/Apache-2.0"
repository = "https://github.com/thscharler/rat-salsa-wgpu"
readme = "readme.md"
keywords = ["ratatui", "input", "event-loop", "wgpu"]
categories = ["command-line-interface"]
exclude = [".idea/*", ".gitignore", "files.gif", "mdedit.gif"]

[lints]
workspace = true

[features]
default = ["dialog_widgets", "async", "fallback_font", "fallback_emoji_font", "fallback_symbol_font", "preserve_aspect_ratio"]
# Async support.
async = ["dep:tokio"]
# Add support for dialog windows.
dialog = ["try_as_traits"]
# Add some support for rat-widget::FileDialog and rat-widget::MsgDialog
dialog_widgets = ["dialog", "rat-widget"]
# ...
preserve_aspect_ratio = []
# Add CascadiaMono-Regular as fallback font.
fallback_font = []
# Add NotoEmoji-Regular as default emoji font.
# You can only choose either fallback_emoji_font or fallback_color_emoji_font.
fallback_emoji_font = []
# Add NotoSansSymbols2-Regular as default symbol font.
fallback_symbol_font = []

[dependencies]
log = "0.4"
crossbeam = "0.8"
try_as_traits = { version = "0.1", optional = true }
winit = "0.30"
fontdb = "0.23.0"
append-only-vec = "0.1.8"
futures-lite = "2.6.1"
tokio = { version = "1.42", features = ["rt", "rt-multi-thread", "sync", "time"], optional = true }

ratatui-core = { version = "0.1.0" }
crossterm = { version = "0.29.0" }

#ratatui-wgpu = { version = "0.4", features = [], git = "https://github.com/thscharler/ratatui-wgpu", branch = "remastered" }
ratatui-wgpu = { version = "0.4", features = [], path = "../ratatui-wgpu" }

rat-event = { version = "2.0", path = "../rat-salsa/rat-event" }
rat-focus = { version = "2.0", path = "../rat-salsa/rat-focus" }
rat-widget = { version = "3.0", optional = true, path = "../rat-salsa/rat-widget", features = ["user_directories"] }

[dev-dependencies]
anyhow = "1.0"
cli-clipboard = "0.4"
configparser = { version = "3.1", features = ["indexmap"] }
dirs = "6.0"
fern = "0.7"
image = "0.25"
indexmap = "2.12"
pure-rust-locales = "0.8"
rand = "0.9"
regex-cursor = "0.1.5"
ropey = "1.6.1"
sys-locale = "0.3"
sysinfo = "0.37"
unicode-segmentation = "1.11"
unicode-width = "0.2.0"

ratatui-widgets = { version = "0.3.0" }

rat-widget = { version = "3.0", path = "../rat-salsa/rat-widget", features = ["user_directories"] }
rat-theme4 = { version = "4.5", path = "../rat-salsa/rat-theme4" }
